--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	<div id="container">
 		<a class="pages" href="doomsday/">Doomsday trainer</a> <br><br>
 		<a class="pages" href="encrypt/encrypt.html">encrypt</a> <br><br>
-		<a class="pages" href="bookshelf/shelfLogin.html">bookshelf</a>
+		<a class="pages" href="bookshelf/bookshelf.html">bookshelf</a>
 	</div>
 </body>
 </html>
