--- a/Star wars speeder/index.html
+++ b/Star wars speeder/index.html
@@ -27,6 +27,11 @@
     <img src="background.png" class="backgroundBottom background1">
     <img src="background2.png" class="backgroundBottom background2">
     <img src="background.png" class="backgroundBottom background3">
+
+    <!-- <audio autoplay="autoplay">
+        <source src="Star Wars RPG Speeder Chase Music & Ambience.mp3">
+    </audio> -->
+    <audio src="file:///C:/Users/matgo/Documents/GitHub/mattigoofy.github.io/Star%20wars%20speeder/actionBackground.mp3" controls></audio>
     <script src="script.js"></script>
 </body>
 </html>
