--- a/Star wars speeder/index.html
+++ b/Star wars speeder/index.html
@@ -31,7 +31,7 @@
     <!-- <audio autoplay="autoplay">
         <source src="Star Wars RPG Speeder Chase Music & Ambience.mp3">
     </audio> -->
-    <audio src="file:///C:/Users/matgo/Documents/GitHub/mattigoofy.github.io/Star%20wars%20speeder/actionBackground.mp3" controls></audio>
+    <audio src="file:///C:/Users/matgo/Documents/GitHub/mattigoofy.github.io/Star%20wars%20speeder/actionBackground.mp3"></audio>
     <script src="script.js"></script>
 </body>
 </html>
