--- a/Star wars speeder backup/index.html
+++ b/Star wars speeder backup/index.html
@@ -31,7 +31,10 @@
     <!-- <audio autoplay="autoplay">
         <source src="Star Wars RPG Speeder Chase Music & Ambience.mp3">
     </audio> -->
-    <audio src="file:///C:/Users/matgo/Documents/GitHub/mattigoofy.github.io/Star%20wars%20speeder/actionBackground.mp3" controls></audio>
+    <!-- <audio src="file:///C:/Users/matgo/Documents/GitHub/mattigoofy.github.io/Star%20wars%20speeder/sounds/actionBackground.mp3" controls></audio> -->
+     <audio controls>
+        <source src="file:///C:/Users/matgo/Documents/GitHub/mattigoofy.github.io/Star%20wars%20speeder/sounds/actionBackground.mp3" type="audio/mpeg">
+     </audio>
     <script src="script.js"></script>
     <script src="levels.js"></script>
 </body>
