--- a/Star wars speeder/index.html
+++ b/Star wars speeder/index.html
@@ -7,31 +7,43 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="images/background.png" class="backgroundTop background1">
-    <img src="images/background2.png" class="backgroundTop background2">
-    <img src="images/background.png" class="backgroundTop background3">
+    <img src="images/space/background.png" class="backgroundTop background1">
+    <img src="images/space/background2.png" class="backgroundTop background2">
+    <img src="images/space/background.png" class="backgroundTop background3">
+
+    <div id="scorebord"><u>scorebord</u><br>1: -<br>2: -<br>3: -</div>
+    <div id="showHitBoxText">show hitboxes</div>
+    <input id="showHitBoxInput" type="checkbox">
     <div id="score">0</div>
+
     <div id="game">
         <div id="startGame" class="popup" style="display:block">
             Start Game<br>
             <button id="startButton">Start</button>
         </div>
         <div id="speeder">
-            <img src="images/speeder2.png" id="speederImg">
+            <img src="images/space/vehicle.png" id="speederImg">
         </div>
         <div id="gameOver" class="popup">
             Game Over<br>
             <button id="resetButton">Reset</button>
         </div>
     </div>
-    <img src="images/background.png" class="backgroundBottom background1">
-    <img src="images/background2.png" class="backgroundBottom background2">
-    <img src="images/background.png" class="backgroundBottom background3">
+    
+
+    <button id="changePlace">
+        sandyRocks
+        <!-- <img src="images/space/background.png" class="changePlaceImg"> -->
+    </button>
+
+    <img src="images/space/background.png" class="backgroundBottom background1">
+    <img src="images/space/background2.png" class="backgroundBottom background2">
+    <img src="images/space/background.png" class="backgroundBottom background3">
 
     <!-- <audio autoplay="autoplay">
         <source src="Star Wars RPG Speeder Chase Music & Ambience.mp3">
     </audio> -->
-    <audio src="file:///C:/Users/matgo/Documents/GitHub/mattigoofy.github.io/Star%20wars%20speeder/actionBackground.mp3" controls></audio>
+    <audio src="file:///C:/Users/matgo/Documents/GitHub/mattigoofy.github.io/Star%20wars%20speeder/actionBackground.mp3"></audio>
     <script src="script.js"></script>
     <script src="levels.js"></script>
 </body>
