--- a/Star wars speeder/index.html
+++ b/Star wars speeder/index.html
@@ -21,8 +21,15 @@
             Start Game<br>
             <button id="startButton">Start</button>
         </div>
+        <div id="continueGame" class="popup">
+            Continue game<br>
+            <button id="continueButton">continue</button>
+        </div>
         <div id="speeder">
             <img src="images/space/vehicle.png" id="speederImg">
+        </div>
+        <div id="explosion">
+            <img src="images/explosion.png" id="explosionImg">
         </div>
         <div id="gameOver" class="popup">
             Game Over<br>
@@ -46,5 +53,7 @@
     <audio src="file:///C:/Users/matgo/Documents/GitHub/mattigoofy.github.io/Star%20wars%20speeder/actionBackground.mp3"></audio>
     <script src="script.js"></script>
     <script src="levels.js"></script>
+    <script src="eventHandlers.js"></script>
+    <script src="helpers.js"></script>
 </body>
 </html>
