--- a/taipan/index.html
+++ b/taipan/index.html
@@ -17,11 +17,17 @@
     <div id="line1"  class="lines"></div>
     <div id="line2"  class="lines"></div>
   
+  <div id="scores">
     <div id="scoreTeam1"><b>Team 1</b></div>
     <div id="scoreTeam2"><b>Team 2</b></div>
-  <!-- </div> -->
+  </div>
+    <!-- </div> -->
+  
+  <div id="emptySpace"></div>
   
   <div id="inputRound">
+    <button id="endButton">Finish</button>
+    
     <table id="table">
       <tr>
         <th></th>
