--- a/taipan/index.html
+++ b/taipan/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles/style.css"/>
+  <link id="gameStyle" rel="stylesheet" href="styles/taipan.css"/>
   <title>Tai-pan</title>
 </head>
 <body>
@@ -63,6 +64,7 @@
   
   <div id="gameDone">
     Team <div id="winningTeam"></div> won <br>
+    <div id="finalScore"></div><br>
     <button id="newGame">New game</button>
   </div>
   
