--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 		<a class="pages" href="encrypt/encrypt.html">encrypt</a> <br><br>
 		<a class="pages" href="bookshelf/bookshelf.html">bookshelf</a> <br><br>
 		<a class="pages" href="Star%20wars%20speeder/index.html">Start Wars Speeder</a>
+<a class="pages" href="taipan/index.html">Taipan</a>
 	</div>
 </body>
 </html>
