--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<a class="pages" href="doomsday/">Doomsday trainer</a> <br><br>
 		<a class="pages" href="encrypt/encrypt.html">encrypt</a> <br><br>
 		<a class="pages" href="bookshelf/bookshelf.html">bookshelf</a> <br><br>
-		<a class="pages" href="Star%20wars%20speeder/index.html">Start Wars Speeder</a>
+		<a class="pages" href="Star%20wars%20speeder/index.html">Start Wars Speeder</a><br><br>
 <a class="pages" href="taipan/index.html">Taipan</a>
 	</div>
 </body>
