--- a/taipan/index.html
+++ b/taipan/index.html
@@ -10,6 +10,10 @@
   <title>Tai-pan</title>
 </head>
 <body>
+  
+  <img id="dragon" src="taipanDragon.png">
+  <img id="dog" src="taipanDog.png">
+  
   <!-- <div id="names"> -->
     <input id="nameInput1" class="nameInputs" type="text" placeholder="name 1">
     <input id="nameInput2" class="nameInputs" type="text" placeholder="name 2">
@@ -68,6 +72,7 @@
         <div id="explosion">
             <h1>Bart & Geeraard <br>Won</h1>
         </div>
+        <div id="finalScore"></div>
         <table id="results-table">
             <tr>
                 <td></td>
