--- a/Star wars speeder/index.html
+++ b/Star wars speeder/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta id="testViewport" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Speeder</title>
-    <link rel="stylesheet" href="styleTop.css">
-    <link rel="stylesheet" href="styleCenter.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/styleTop.css">
+    <link rel="stylesheet" href="styles/styleCenter.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <img src="images/space/background.png" class="backgroundTop background1">
@@ -73,10 +73,27 @@
     <!-- <audio autoplay="autoplay">
         <source src="Star Wars RPG Speeder Chase Music & Ambience.mp3">
     </audio> -->
-    <audio src="file:///C:/Users/matgo/Documents/GitHub/mattigoofy.github.io/Star%20wars%20speeder/actionBackground.mp3"></audio>
-    <script src="script.js"></script>
-    <script src="levels.js"></script>
-    <script src="eventHandlers.js"></script>
-    <script src="helpers.js"></script>
+    <!-- <audio src="file:///C:/Users/matgo/Documents/GitHub/mattigoofy.github.io/Star%20wars%20speeder/actionBackground.mp3"></audio> -->
+    <script src="scripts/levels.js"></script>
+    <!-- <script src="scripts/script.js"></script>
+    <script src="scripts/eventHandlers.js"></script>
+    <script src="scripts/helpers.js"></script> -->
+    <script>
+        if(screen.width > 1000) {
+            var script = document.createElement("script");
+            script.setAttribute("src", "scripts/script.js");
+            document.body.appendChild(script);
+
+            var script = document.createElement("script");
+            script.setAttribute("src", "scripts/eventHandlers.js");
+            document.body.appendChild(script);
+
+            var script = document.createElement("script");
+            script.setAttribute("src", "scripts/helpers.js");
+            document.body.appendChild(script);
+        } else {
+
+        }
+    </script>
 </body>
 </html>
