--- a/phoneBackground/index.html
+++ b/phoneBackground/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="light-theme">
-
+    
+    <div id="topBeam"></div>
+    
     <!-- Photos Section -->
     <div id="photo-gallery">
         <img src="Renée1.jpg" class="photo active">
@@ -23,29 +25,18 @@
         <img src="Renée11.jpeg" class="photo">
     </div>
   
-    <div id="topBeam"></div>
 
     <!-- Clock and Dropdown for Weather -->
-    <div id="info">
-        <div id="clock">00:00:00<br>14 Aug '24</div>
-        <button id="toggle-weather">☰</button>
-        <button id="pause-music">&#10073;&#10073;</button>
-        <div id="weather" class="hidden">Weather Info Here</div>
+    <div class="star-wars-clock">
+        <div id="time">14:00:00</div>
+        <div id="date">15 aug '24'</div>
     </div>
 
     <!-- Star Wars Animation -->
-    <div id="star-wars">
+    <!--<div id="star-wars">
         <div class="tie-fighter"></div>
         <div class="x-wing"></div>
-    </div>
-
-    <!-- Music Player -->
-    <audio id="background-music" loop>
-        <source src="path_to_music.mp3" type="audio/mp3">
-    </audio>
-
-    <!-- Theme Toggle -->
-    <button id="theme-toggle">Switch Theme</button>
+    </div>-->
 
     <script src="scripts/script.js"></script>
 </body>
