mobile style added

--- a/bookshelf2.0/index.html
+++ b/bookshelf2.0/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/mainStyle.css">
     <link rel="stylesheet" href="styles/itemStyle.css">
     <link rel="stylesheet" href="styles/groupStyle.css">
+    <link rel="stylesheet" href="styles/mobileStyle.css">
 </head>
 <body>
     <div id="login-screen">
