--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		margin-bottom: 5%;
 		font-size: 500%;
 	}
-	a {
+	a.pages {
 		display: inline-block;
 		color: darkgray;
 		font-size:xx-large;
@@ -39,16 +39,22 @@
 		width: 30%;
 		margin-bottom: 0;
 	}
+	/* a.downloads {
+		position: relative;
+		left: 20%;
+	} */
   </style>
 </head>
 <body>
 	<h1>welcome</h1>
 	<div id="container">
 		<a class="pages" href="doomsday/">Doomsday trainer</a> <br><br>
-		<a class="pages" href="encrypt/encrypt.html">encrypt</a> <br><br>
-		<a class="pages" href="bookshelf/bookshelf.html">bookshelf</a> <br><br>
-		<a class="pages" href="Star%20wars%20speeder/index.html">Start Wars Speeder</a><br><br>
-<a class="pages" href="taipan/index.html">Taipan</a>
+		<a class="pages" href="encrypt/encrypt.html">Encrypt</a> <br><br>
+		<a class="pages" href="bookshelf/bookshelf.html">Bookshelf</a> <br><br>
+		<a class="pages" href="bookshelf2.0/bookshelf2.0.html">Bookshelf2.0</a> <br>
+		<a class="downloads" href="bookshelf2.0/app-release.apk" download="bookshelf2.0.apk"><u>Download bookshelf2.0</u></a> <br><br>
+		<a class="pages" href="Star%20wars%20speeder/index.html">Star Wars Speeder</a><br><br>
+		<a class="pages" href="taipan/index.html">Taipan</a>
 	</div>
 </body>
 </html>
