--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 		<a class="pages" href="bookshelf2.0/index.html">Bookshelf2.0</a> <br>
 		<a class="downloads" href="bookshelf2.0/app-release.apk" download="bookshelf2.0.apk"><u>Download bookshelf2.0</u></a> <br><br>
 		<a class="pages" href="Star%20wars%20speeder/index.html">Star Wars Speeder</a><br><br>
-		<a class="pages" href="taipan/index.html">Taipan</a>
+		<a class="pages" href="taipan/index.html">Taipan</a> <br>
+		<a class="downloads" href="taipan/app-release.apk" download="taipan.apk"><u>Download taipan</u></a> 
 	</div>
 </body>
 </html>
