--- a/minesweeper/index.html
+++ b/minesweeper/index.html
@@ -11,6 +11,7 @@
     <table id="field">
     </table>
 
+    <script src="cell.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
