nice looking + flags + class

--- a/minesweeper/index.html
+++ b/minesweeper/index.html
@@ -8,8 +8,24 @@
 </head>
 <body>
     <h1>Minesweeper</h1>
+
+    <label>Columns</label>
+    <label>Rows</label>
+    <label>Bombs</label>
+
+    <br>
+
+    <input id="colsIn" type="text" placeholder="10">
+    <input id="rowsIn" type="text" placeholder="8">
+    <input id="bombsIn" type="text" placeholder="4">
+    <br>
+    <br>
+
     <table id="field">
     </table>
+
+    <br>
+    <button id="restartBtn">Restart</button>
 
     <script src="cell.js"></script>
     <script src="script.js"></script>
