--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		<a class="downloads" href="bookshelf2.0/app-release.apk" download="bookshelf2.0.apk"><u>Download bookshelf2.0</u></a> <br><br>
 		<a class="pages" href="Star%20wars%20speeder/index.html">Star Wars Speeder</a><br><br>
 		<a class="pages" href="taipan/index.html">Taipan</a> <br>
-		<a class="downloads" href="taipan/app-release.apk" download="taipan.apk"><u>Download taipan</u></a> <br>
+		<a class="downloads" href="taipan/app-release.apk" download="taipan.apk"><u>Download taipan</u></a> <br><br>
 		<a class="pages" href="minesweeper/index.html">Minesweeper</a> <br>
 	</div>
 </body>
