fixed flaggs + bomblist

--- a/minesweeper/index.html
+++ b/minesweeper/index.html
@@ -35,6 +35,7 @@
     <div id="endGame"></div>
 
     <script src="cell.js"></script>
+    <script src="bombList.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
