Added new main page

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
   <style>
 	body {
 		background-color: rgba(60, 59, 59, 0.768);
-		text-align: center;
-		padding-top: 2%;
+		text-align: left;
+		padding-left: 20px;
+		/* padding-top: 20px; */
 	}
 	h1 {
-		margin-bottom: 5%;
+		margin-bottom: 1.5%;
 		font-size: 500%;
 	}
 	a.pages {
@@ -20,7 +21,7 @@
 		font-size:xx-large;
 		border: solid;
 		border-color: rgba(240, 248, 255, 0.678);
-		border-radius: 2px;
+		border-radius: 10px;
 		padding: 0.3%;
 		width: 20%;
 		background-color: rgba(42, 41, 41, 0.768);
@@ -43,10 +44,16 @@
 		position: relative;
 		left: 20%;
 	} */
+
+	@media (max-width: 600px) {
+		body {
+			text-align: center;
+		}
+	}
   </style>
 </head>
 <body>
-	<h1>welcome</h1>
+	<h1>Welcome on my Github site</h1>
 	<div id="container">
 		<a class="pages" href="doomsday/">Doomsday trainer</a> <br><br>
 		<a class="pages" href="encrypt/encrypt.html">Encrypt</a> <br><br>
