udpate index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <article class="page card">
       <h2 class="page-heading">Bookshelf 2.0</h2>
-      <p class="page-info">New and improved bookshelf, hopefully better then the previous one.</p>
+      <p class="page-info">New and not so improved bookshelf, because it is not working right now.</p>
       <div class="actions">
         <a class="btn primary" href="bookshelf2.0/index.html">Open</a>
         <a class="btn secondary" href="bookshelf2.0/app-release.apk" download="bookshelf2.0.apk">Download APK</a>
